Pyro 3.7 import (vorige import was 3.6...)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bdist_rpm]
-doc_files = LICENSE,doc
+doc_files = LICENSE,docs
 
 ### Enable the following two items for unattended install.
 ### The scripts location is mandatory. Change it so something sensible.
