--- a/Pyro.conf
+++ b/Pyro.conf
@@ -56,6 +56,7 @@ PYRO_MOBILE_CODE=
 PYRO_DNS_URI=
 PYRO_ES_QUEUESIZE=
 PYRO_ES_BLOCKQUEUE=
+PYRO_ONEWAY_THREADED=
 PYROSSL_CLIENT_CERT=
 PYROSSL_SERVER_CERT=
 PYROSSL_CA_CERT=
