--- a/Pyro.conf
+++ b/Pyro.conf
@@ -57,8 +57,8 @@ PYRO_DNS_URI=
 PYRO_ES_QUEUESIZE=
 PYRO_ES_BLOCKQUEUE=
 PYRO_ONEWAY_THREADED=
-PYROSSL_CLIENT_CERT=
-PYROSSL_SERVER_CERT=
+PYROSSL_CERT=
+PYROSSL_KEY=
 PYROSSL_CA_CERT=
 PYROSSL_CERTDIR=
 PYROSSL_POSTCONNCHECK=
